tests/fixtures/invalid/bin_3_args.py
# bin() takes at most 1 argument, got 3
x = bin(1, 1, 1)
